--- a/Sphere.html
+++ b/Sphere.html
@@ -948,7 +948,7 @@ You noticed you were close to Oni&#39;s house. He&#39;s always late.
 [[Go to Oni&#39;s house]]
 [[Go back|Keep going ahead.]]</tw-passagedata>
 <tw-passagedata pid="43" name="Go right." tags="" position="1257,3971">You are outside your local convenience store.
-Had to jog for a bit, but you liked this part of the zone..
+Had to jog for a bit, but you liked this part of the zone...
 Farther away from the center which was more commercial and the west side which was more agricultural. Here, the buildings change to an older style. It was close to the lift to the lower zones.
 Close to the dredges you were told never to visit.
 However, it had its own beauty. It is simpler, more Retro.
