Added Camera functionality and sound.

--- a/main.html
+++ b/main.html
@@ -18,11 +18,10 @@
 
 
 
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
 
-
-
-</style><script role="script" id="twine-user-script" type="text/twine-javascript">var _src="https://howlerjs.com/assets/howler.js/dist/howler.min.js"
+var _src="https://howlerjs.com/assets/howler.js/dist/howler.min.js"
 
 $(function () {
     $.getScript(_src, function (data, textStatus, jqxhr) {
@@ -62,6 +61,7 @@ $(function () {
 
 		
 });
+
 
 
 
@@ -1175,7 +1175,6 @@ window.onscroll = function(e){
 	}
 }
 &lt;/script&gt;</tw-passagedata>
-
 <tw-passagedata pid="47" name="Wake up" tags="" position="1497,1663">{(set: $EnergyA to 10)
 (set: $EnergyB to 10)
 }
